--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -581,7 +581,7 @@ crossorigin=""/>
   
   <div class="collapse navbar-collapse" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="false" class="nav-link" id="pills-tab1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="false" class="nav-link" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation></span></a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
     <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3">Réglementation</a></li>
     <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4">Autres Remarques</a></li>
@@ -681,8 +681,7 @@ crossorigin=""/>
 <div class="blocktable">
   <div class="table-responsive text-center"><table class="table1">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption" lang="fr"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
-    <caption class="caption" lang="en"> Maximum usage according to the product category :</caption> 
+    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
     <!-- EN-TETE DU TABLEAU-->
     <tr>
       <th>Cat.1</th>
