MAJ onglet modaux nat + IFRA

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -575,17 +575,17 @@ crossorigin=""/>
   <!-- définissions des onglets -->
 <div class="panel-heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-  <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation">
-    Veuillez sélectionner une catégorie …
+  <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation"><span lang="fr">Veuillez sélectionner une catégorie..</span><span lang="en">Please select a category..</span>
+    
   </button>
   
   <div class="collapse navbar-collapse" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="false" class="nav-link" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation></span></a></li>
-    <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
-    <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3">Réglementation</a></li>
-    <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="true" class="nav-link active" id="pills-tab6">Fournisseurs</a></li>
+    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="false" class="nav-link" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
+    <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2"><span lang="fr">Botanique Origine Extraction</span><span lang="en">Origins & Botany</span></a></li>
+    <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
+    <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
+    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="true" class="nav-link active" id="pills-tab6"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
   </ul>
   </div>
 </nav>
@@ -603,7 +603,7 @@ crossorigin=""/>
   <p class="item"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b>
 <span id="modalbody-tenue" class="textitem" ></span></span></p>
   
-  <p class="item"><span><b lang="fr"> Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><b lang="en"> Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials’ cost can evolve according to various factors of their own."></sup> : </b>
+  <p class="item"><span><b lang="fr"> Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><b lang="en"> Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b>
 <span id="modalbody-price" class="textitem"></span></span></p>
 
 <p class="item"><span><b lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b><b lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b><span id="modalbody-componat" class="textitem2"></span></span></p>
@@ -637,7 +637,7 @@ crossorigin=""/>
 <p class="item"><span><b lang="fr">Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</b><b lang="en">Botanical name <sup class="fas fa-question-circle iconetab" title="Name of the plant or the animal, according to the International Code of Nomenclature for Plants."></sup> :</b>
   <span id="modalbody-nbota" class="textitem3" ></span></span></p>
 
-<p class="item"><span><b lang="fr">Botanique <sup class="fas fa-question-circle iconetab" title="Famille et/ou genre botanique à laquelle la matière première est ratachée."></sup> :</b><b lang="en">Botanical Filiation <sup class="fas fa-question-circle iconetab" title="Botanical family and genus to which the raw material is linked."></sup> :</b>
+<p class="item"><span><b lang="fr">Botanique <sup class="fas fa-question-circle iconetab" title="Famille et/ou genre botanique à laquelle la matière première est ratachée."></sup> :</b><b lang="en">Botanical filiation <sup class="fas fa-question-circle iconetab" title="Botanical family and genus to which the raw material is linked."></sup> :</b>
   <span id="modalbody-bota"  class="textitem"></span></span></p>
 
 <p class="item"><span><b lang="fr">Origine(s) géographique(s) <sup class="fas fa-question-circle iconetab" title="Pays et régions de culture de la matière première."></sup> :</b><b lang="en">Geographic origin <sup class="fas fa-question-circle iconetab" title="Country and region of cultivation of the raw material."></sup> :</b>
@@ -714,17 +714,16 @@ crossorigin=""/>
   
   <table class="table2">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption" lang="fr"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
-    <caption class="caption" lang="en"> Maximum usage according to the product category :</caption> 
+    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
     <!-- EN-TETE DU TABLEAU-->
     <tr>
-      <th colspan="2">En contact avec la peau</th>
-      <th rowspan="2">Sans contact avec la peau</th>
+      <th colspan="2"><span lang="fr">En contact avec la peau</span><span lang="en">Skin contact products </span></th>
+      <th rowspan="2"><span lang="fr">Sans contact avec la peau</span><span lang="en">Non skin contact products </span></th>
     </tr>
     <!-- CORPS DU TABLEAU-->
     <tr>
-      <th>Produits non rincés</th>
-      <th>Produits rincés</th>
+      <th><span lang="fr">Produits non rincés</span><span lang="en">Leave on products</span></th>
+      <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
     </tr>
     <tr>
       <td><span id="modalbody-leaveon"></span> %</td>
@@ -735,16 +734,15 @@ crossorigin=""/>
   
   <table class="table3">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption" lang="fr"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
-    <caption class="caption" lang="en"> Maximum usage according to the product category :</caption> 
+    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
     <!-- EN-TETE DU TABLEAU-->
     <tr>
-      <th>Fine fragrance</th>
-      <th>Eau de toilette</th>
-      <th>Crème parfumée</th>
-      <th>Produits non rincés</th>
-      <th>Produits rincés</th>
-      <th>Possible contact dermique accidentel</th> 
+      <th><span lang="fr">Fine fragrance</span><span lang="en">Fine fragrance</span></th>
+      <th><span lang="fr">Eau de toilette</span><span lang="en">Eau de toilette</span></th>
+      <th><span lang="fr">Crème parfumée</span><span lang="en">Fragrancing cream</span></th>
+      <th><span lang="fr">Produits non rincés</span><span lang="en">Leave on products</span></th>
+      <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
+      <th><span lang="fr">Possible contact dermique accidentel</span><span lang="en"> Non-skin, incidental skin contact </span></th> 
     </tr>
     <!-- CORPS DU TABLEAU-->
     <tr>
@@ -756,7 +754,7 @@ crossorigin=""/>
       <td>%</td>
     </tr>
   </table></div>
-  <p class="logoifra text-size-11px text-center text-my-grey">Scentree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur. </p>
+  <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span> </p>
   <p class="logoifra text-size-11px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
   <p class="logoifra text-size-11px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></p>
 </div>
