All natural modal OK

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -611,7 +611,7 @@ crossorigin=""/>
 </div>
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent">
 
-<p class="item"><span><b lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup>:</b><b lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup>:</b>
+<p class="item"><span><b lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b><b lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b>
 <span id="modalbody-cas" class="textitem"></span></span></p>
 
 <p class="item"><span><b lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b><b lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b>
@@ -708,7 +708,7 @@ crossorigin=""/>
       <td><span id="modalbody-cat8"></span> %</td>
       <td><span id="modalbody-cat9"></span> %</td>
       <td><span id="modalbody-cat10"></span> %</td>
-      <td><span id="modalbody-cat11"></span></td>
+      <td><span lang="fr">Non restreint</span><span lang="en">Not Restricted</span></td>
     </tr>
   </table>
   
@@ -755,8 +755,10 @@ crossorigin=""/>
     </tr>
   </table></div>
   <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span> </p>
-  <p class="logoifra text-size-11px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
-  <p class="logoifra text-size-11px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></p>
+
+  <p class="logoifra text-size-11px"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span></p>
+
+  <p class="logoifra text-size-11px"><span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span><span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span></p>
 </div>
 </div>
 </div>
@@ -789,7 +791,7 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-  <p class="textitem"><span class="fournisseurs" lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a> :</b><span class="fournisseurs" lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
+  <p class="textitem"><span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a> :</b><span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
 </div>
 </div>
 </div>
