--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -791,7 +791,9 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-  <p class="textitem"><span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a> :</b><span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
+  <p class="textitem">
+    <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+    <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
 </div>
 </div>
 </div>
@@ -837,17 +839,17 @@ crossorigin=""/>
   <!-- définissions des onglets -->
 <div class="panel-heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-  <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation">
-    Veuillez sélectionner une catégorie …
+  <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation"><span lang="fr">Veuillez sélectionner une catégorie..</span><span lang="en">Please select a category..</span>
   </button>
   
   <div class="collapse navbar-collapse" id="navbarForSynthetiques">
   <ul id="ongletssynth" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-1">Présentation Générale</a></li>
-    <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-2">Obtention  Chimie</a></li>
-    <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-3">Réglementation</a></li>
-    <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="true" class="nav-link active" id="pills-tab-synthetiques-5">Fournisseurs</a></li>
+    <li class="nav-item">
+      <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="false" class="nav-link" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
+    <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab7"><span lang="fr">Botanique Origine Extraction</span><span lang="en">Origins & Botany</span></a></li>
+    <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab8"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
+    <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab10"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
+    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="true" class="nav-link active" id="pills-tab11"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
   </ul>
   </div>
 </nav>
@@ -861,7 +863,7 @@ crossorigin=""/>
 <div class="container-fluid panelcontent">
 <div class="row">
 <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
-  <p class="item"><span><b>Tenue <sup class="fas fa-question-circle icone"  title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><span id="modalbody-tenue1" class="textitem"></span></span></p>
+  <p class="item"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b><span id="modalbody-tenue1" class="textitem"></span></span></p>
   
   <p class="item"><span> <b>Prix <sup class="fas fa-question-circle icone" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières première peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><span id="modalbody-price1" class="textitem"></span></span></p>
 
