synthétique onglet reglementation

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -871,7 +871,7 @@ crossorigin=""/>
       
   <p class="item"><span><b lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b><b lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b><span id="modalbody-aspect1" class="textitem"></span></span></p>
 
-  <p class="item"><span><b lang="fr">Formule Brute <sup class="fas fa-question-circle icone" title="Formule répertoriant les atomes composant la molécule étudiée."></sup> :</b><b lang="en">Molecular formula<sup class="fas fa-question-circle icone" title="Formula giving the atoms of the studies molecules."></sup> :</b><span id="modalbody-fbrute1" class="textitem"></span></span></p>
+  <p class="item"><span><b lang="fr">Formule Brute <sup class="fas fa-question-circle icone" title="Formule répertoriant les atomes composant la molécule étudiée."></sup> :</b><b lang="en">Molecular formula <sup class="fas fa-question-circle icone" title="Formula giving the atoms of the studies molecules."></sup> :</b><span id="modalbody-fbrute1" class="textitem"></span></span></p>
 </div>
 <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
   <p class="item"><span><b lang="fr">Densité <sup class="fas fa-question-circle icone" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</b><b lang="en">Density <sup class="fas fa-question-circle icone" title="A no-unit data giving the mass of raw material for a given volume (d = 1,5 means 1 mL = 1,5g)."></sup> :</b><span id="modalbody-densite1" class="textitem"></span></span></p>
@@ -916,20 +916,20 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-12">
-  <p><span class=IFRA><b>IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><span id="modalbody-ifra1"  class="textitem"></span></span></p>
+  <p><span class=IFRA><b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b><span id="modalbody-ifra1"  class="textitem"></span></span></p>
 
 <div class="container-fluid">
 <div class="row">
 <div class="col-12">
 <div class="blockifra1">
-  <p class="amendment"><span><b>Amendement <sup class="fas fa-question-circle  iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b><span id="modalbody-amendments" class="textitem"></span></span></p>
+  <p class="amendment"><span><b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b><b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b><span id="modalbody-amendments" class="textitem"></span></span></p>
 
-  <p class="commentaires"><span><b>Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b><span id="modalbody-commentifras" class="textitem"></span></span></p>
+  <p class="commentaires"><span><b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b><b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b><span id="modalbody-commentifras" class="textitem"></span></span></p>
 </div>
 <div class="blocktable">
 <div class="table-responsive text-center"><table class="table1">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption"> <i>Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</i></caption> 
+    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
     <!-- EN-TETE DU TABLEAU-->
     <tr>
       <th>Cat.1</th>
@@ -956,25 +956,24 @@ crossorigin=""/>
       <td><span id="modalbody-cat8s"></span> %</td>
       <td><span id="modalbody-cat9s"></span> %</td>
       <td><span id="modalbody-cat10s"></span> %</td>
-      <td><span id="modalbody-cat11s"></span></td>
+      <td><span lang="fr">Non restreint</span><span lang="en">Not Restricted</span></td>
     </tr>
   </table>
   
   <table class="table2">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption"> <i>Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</i></caption> 
+    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
     <!-- EN-TETE DU TABLEAU-->
     <tr>
-      <th colspan="2">En contact avec la peau</th>
-      <th rowspan="2">Sans contact avec la peau</th>
-      
+      <th colspan="2"><span lang="fr">En contact avec la peau</span><span lang="en">Skin contact products </span></th>
+      <th rowspan="2"><span lang="fr">Sans contact avec la peau</span><span lang="en">Non skin contact products </span></th>
     </tr>
     <!-- CORPS DU TABLEAU-->
     <tr>
-      <th>Produits non rincés</th>
-      <th>Produits rincés</th>
+      <th><span lang="fr">Produits non rincés</span><span lang="en">Leave on products</span></th>
+      <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
     </tr>
-    <tr >
+    <tr>
       <td><span id="modalbody-leaveons"></span> %</td>
       <td>X</td>
       <td>X</td>
@@ -983,15 +982,15 @@ crossorigin=""/>
   
   <table class="table3">
     <!-- TITRE DU TABLEAU-->
-    <caption class="caption"> <i>Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</i></caption> 
+   <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
     <!-- EN-TETE DU TABLEAU-->
     <tr>
-      <th>Fine fragrance</th>
-      <th>Eau de toilette</th>
-      <th>Crème parfumée</th>
-      <th>Produits non rincés</th>
-      <th>Produits rincés</th>
-      <th>Possible contact dermique accidentel</th> 
+      <th><span lang="fr">Fine fragrance</span><span lang="en">Fine fragrance</span></th>
+      <th><span lang="fr">Eau de toilette</span><span lang="en">Eau de toilette</span></th>
+      <th><span lang="fr">Crème parfumée</span><span lang="en">Fragrancing cream</span></th>
+      <th><span lang="fr">Produits non rincés</span><span lang="en">Leave on products</span></th>
+      <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
+      <th><span lang="fr">Possible contact dermique accidentel</span><span lang="en"> Non-skin, incidental skin contact </span></th> 
     </tr>
     <!-- CORPS DU TABLEAU-->
     <tr>
@@ -1003,15 +1002,17 @@ crossorigin=""/>
       <td><span id="modalbody-noskin"></span> %</td>
     </tr>
   </table></div>
-  <p class="logoifra text-size-11px text-center text-my-grey">Scentree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur. </p>
-  <p class="logoifra text-size-11px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
-  <p class="logoifra text-size-11px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></p>
+   <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span> </p>
+
+  <p class="logoifra text-size-11px"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span></p>
+
+  <p class="logoifra text-size-11px"><span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span><span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span></p>
 </div>
 </div>
 </div>
 </div>
 
-<p class=""><span class="allergenes"><b>Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b><span id="modalbody-allergenes1" class="textitem"></span></span></p>
+<p class=""><span class="allergenes"><b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b><b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b><span id="modalbody-allergenes1" class="textitem"></span></span></p>
 
 </div>    
 </div>
