--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1024,9 +1024,9 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-lg-12">
-  <p class="item"><span class="utilisation"><b>Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b><span id="modalbody-utilisation1" class="textitem"></span></span></p>
+  <p class="item"><span class="utilisation"><b lang="fr">Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b><b lang="en">Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b><span id="modalbody-utilisation1" class="textitem"></span></span></p>
   
-  <p class="item"><span class="Commentaires"> <b>Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> : </b><span id="modalbody-remarques1" class="textitem"></span></span></p>
+  <p class="item"><span class="Commentaires"> <b lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b><b lang="en">Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b><span id="modalbody-remarques1" class="textitem"></span></span></p>
 </div>
 </div> 
 </div>
@@ -1037,7 +1037,8 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-lg-12">
-  <p class="textitem"><span class="fournisseurs">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co"> fournisseurs@scentree.co </a></span></p>
+  <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+  <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
 </div>
 </div>
 </div>
