--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -84,7 +84,7 @@ crossorigin=""/>
 
 <div class="row h-25 align-items-start">
   <div class="col-12 align-self-end">
-    <div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find an raw material&nbsp;:&nbsp</span></div>
+    <div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <div class="col-12 text-center align-self-start">
   <!--Recherche -->
@@ -373,12 +373,14 @@ crossorigin=""/>
   <p lang="fr"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
   <p lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</p>
       </div>
+      <br>
       <div class="col-12 col-lg-6">
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
-<p lang="en"><b><i class="text-underline">A TRADUIRE</i></b> </p>
+<p lang="en"><b><i class="text-underline">Partner companies</i></b> </p>
 
 <button class="btn" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
       </div>
+      <br>
       <div class="col-12 col-lg-6">
   <p lang="fr"><b><i class="text-underline">Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
   <p lang="en"><b><i class="text-underline">Professionals who participated to the incrementation of the ScenTree database :</i></b> </p>
@@ -876,7 +878,7 @@ crossorigin=""/>
 <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
   <p class="item"><span><b lang="fr">Densité <sup class="fas fa-question-circle icone" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</b><b lang="en">Density <sup class="fas fa-question-circle icone" title="A no-unit data giving the mass of raw material for a given volume (d = 1,5 means 1 mL = 1,5g)."></sup> :</b><span id="modalbody-densite1" class="textitem"></span></span></p>
   
-  <p class="item"><span><b lang="fr">Point Eclair<sup class="fas fa-question-circle icone" title="Donne, en degrés, un indice sur la volatilité de la matière première. Il s'agit de la température à laquelle la matière première forme un mélange inflammable avec l'air en surface."></sup> :</b><b lang="en">Flash Point <sup class="fas fa-question-circle icone" title="Gives, in degrees, an indication on the volatility of the raw material. It is the temperature at which the raw materials form a flammable mix with surface air."></sup> :</b><span id="modalbody-fp1" class="textitem"></span></span></p>
+  <p class="item"><span><b lang="fr">Point Eclair <sup class="fas fa-question-circle icone" title="Donne, en degrés, un indice sur la volatilité de la matière première. Il s'agit de la température à laquelle la matière première forme un mélange inflammable avec l'air en surface."></sup> :</b><b lang="en">Flash Point <sup class="fas fa-question-circle icone" title="Gives, in degrees, an indication on the volatility of the raw material. It is the temperature at which the raw materials form a flammable mix with surface air."></sup> :</b><span id="modalbody-fp1" class="textitem"></span></span></p>
   
   <p class="item"><span><b lang="fr">Log P <sup class="fas fa-question-circle icone" title="Donne un indice sur la miscibilité du composé dans l'eau. Il s'agit du logarithme en base 10 du rapport entre les concentrations en matière première réparties entre l'octanol et l'eau, dans un mélange hétérogène de ces trois composés."></sup> :</b><b lang="en">Log P <sup class="fas fa-question-circle icone" title="Gives an indication on the water-solubility of the molecule. It is the logarithm to the basis 10 of the ratio between the raw material's concentration in octanol and water, in a heterogeneous mix of those three compounds."></sup> :</b><span id="modalbody-logp"  class="textitem"></span></span></p>
   
