--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -373,14 +373,16 @@ crossorigin=""/>
   <p lang="fr"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
   <p lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</p>
       </div>
-      <br>
+
+      <div class="row">
+
       <div class="col-12 col-lg-6">
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
-<p lang="en"><b><i class="text-underline">Partner companies</i></b> </p>
+<p lang="en"><b><i class="text-underline">Partner companies : </i></b> </p>
 
 <button class="btn" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
       </div>
-      <br>
+
       <div class="col-12 col-lg-6">
   <p lang="fr"><b><i class="text-underline">Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
   <p lang="en"><b><i class="text-underline">Professionals who participated to the incrementation of the ScenTree database :</i></b> </p>
