mod 5esens modal

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1793,8 +1793,10 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-  <p>A l’écoute de son temps, au plus près des acteurs, et des passionnés de la belle parfumerie, Cinquième Sens met tout son savoir-faire et son expérience pour vous offrir un lieu innovant, unique et accessible. Soient 80m2 d’espace, au pied de la tour Eiffel, comprenant trois niveaux d’accès en toute flexibilité : Olfawork, Olfaction et Olfalab. </p>
-  <p>Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></p>
+  <p lang="fr">A l’écoute de son temps, au plus près des acteurs, et des passionnés de la belle parfumerie, Cinquième Sens met tout son savoir-faire et son expérience pour vous offrir un lieu innovant, unique et accessible. Soient 80m <sup>2</sup> d’espace, au pied de la tour Eiffel, comprenant trois niveaux d’accès en toute flexibilité : Olfawork, Olfaction et Olfalab. </p>
+  <p lang="en">Sensitive to its time, close to all of the beautiful perfumery actors and passionates, Cinquième Sens is putting all its know-how and experience to offer an innovative, unique and reachable place. Here are 80 m<sup>2</sup> of space, on bottom of the Eiffel Tower, including three levels of access, in the more flexible way : Olfawork, Olfaction and Olfalab. </p>
+  <p lang="fr">Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></p>
+  <p lang="en">To find out more about Cinquième Sens and its co-working space, follow the link to the <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">website</a></p>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></p></div>
 </div>
